src/objects/Quote_Charge_Titles__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Format_Type_Name__c</fullName>
        <formula>text(Format_Type__r.Format__c)</formula>
        <label>Format Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Format_Types__c.Title__c</field>
                <operation>equals</operation>
                <valueField>$Source.Titles__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Format_Types__c</referenceTo>
        <relationshipLabel>Quote Charge Titles</relationshipLabel>
        <relationshipName>Format_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Rate Plan Charge</label>
        <referenceTo>Quote_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Quote Charge Titles</relationshipLabel>
        <relationshipName>Quote_Charge_Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Titles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Titles</label>
        <referenceTo>Titles__c</referenceTo>
        <relationshipLabel>Quote Charge Titles</relationshipLabel>
        <relationshipName>Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote Charge Titles</label>
    <nameField>
        <displayFormat>QCT-{0000}</displayFormat>
        <label>Quote Charge Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Charge Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>